# CSnake

./: CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: entities.cpp.89705F2F6DBF7A27.idx  entities.h.745767D8944018F0.idx  game.cpp.A90D85FC1E38CD34.idx  game.h.0D275A9DCD9D4887.idx  main.cpp.268FB7093E8C159E.idx
include/: agent.h  apple.h  entities.h  game.h  model.h  snake.h
src/: agent.cpp  apple.cpp  entities.cpp  game.cpp  main.cpp  model.cpp  snake.cpp
